add bubbles in login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,42 +13,16 @@
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
         <div class="col-lg-5">
-          <!--
-          <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
-            <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          -->
           <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
             <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
-              <!-- <span aria-hidden="true">&times;</span> -->
-            </button>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)"></button>
           </ngb-alert>
           <div class="card bg-secondary shadow border-0">
-            <!--
-            <div class="card-header bg-white pb-5">
-              <div class="text-muted text-center mb-3">
-                <small>Sign in with</small>
-              </div>
-              <div class="btn-wrapper text-center">
-                <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon">
-                    <img src="./assets/img/icons/common/github.svg">
-                  </span>
-                  <span class="btn-inner--text">Github</span>
-                </a>
-                <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon">
-                    <img src="./assets/img/icons/common/google.svg">
-                  </span>
-                  <span class="btn-inner--text">Google</span>
-                </a>
-              </div>
-            </div>
-            -->
+            <div class="bubble" style="--i:0;"></div>
+            <div class="bubble" style="--i:1;"></div>
+            <div class="bubble" style="--i:2;"></div>
+            <div class="bubble" style="--i:3;"></div>
+            <div class="bubble" style="--i:4;"></div>
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
                 <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
@@ -74,14 +48,6 @@
                     {{ loginForm.errorMessage }}
                   </mat-error>
                 </mat-form-field>
-                <!--
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label class="custom-control-label" for=" customCheckLogin">
-                    <span>Recordarme</span>
-                  </label>
-                </div>
-                -->
                 <div class="text-center">
                   <button [disabled]="loginForm.baseForm.invalid" type="button" name="submitLogin"
                     class="btn btn-primary my-4 form-control" (click)="onLogin()">Iniciar sesión</button>
@@ -92,20 +58,6 @@
               </div>
             </div>
           </div>
-          <!-- 
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="javascript:void(0)" class="text-light">
-                <small>Forgot password?</small>
-              </a>
-            </div>
-            <div class="col-6 text-right">
-              <a href="javascript:void(0)" class="text-light">
-                <small>Create new account</small>
-              </a>
-            </div>
-          </div>
-          -->
         </div>
       </div>
     </div>
