--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -15,32 +15,14 @@
         <div class="col-lg-5">
           <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage != ''">
             <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
-              <!-- <span aria-hidden="true">&times;</span> -->
-            </button>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)"></button>
           </ngb-alert>
           <div class="card bg-secondary shadow border-0">
-            <!--  
-            <div class="card-header bg-white pb-5">
-              <div class="text-muted text-center mb-3">
-                <small>Sign up with</small>
-              </div>
-              <div class="text-center">
-                <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
-                  <span class="btn-inner--icon">
-                    <img src="./assets/img/icons/common/github.svg">
-                  </span>
-                  <span class="btn-inner--text">Github</span>
-                </a>
-                <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon">
-                    <img src="./assets/img/icons/common/google.svg">
-                  </span>
-                  <span class="btn-inner--text">Google</span>
-                </a>
-              </div>
-            </div>
-          -->
+            <div class="bubble" style="--i:0;"></div>
+            <div class="bubble" style="--i:1;"></div>
+            <div class="bubble" style="--i:2;"></div>
+            <div class="bubble" style="--i:3;"></div>
+            <div class="bubble" style="--i:4;"></div>
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
                 <h1 class="h3 mb-3 font-weight-normal">Registrarse</h1>
@@ -73,18 +55,6 @@
                     {{ loginForm.errorMessage }}
                   </mat-error>
                 </mat-form-field>
-                <!--<div class="row my-4">
-                  <div class="col-12">
-                    <div class="custom-control custom-control-alternative custom-checkbox">
-                      <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                      <label class="custom-control-label" for="customCheckRegister">
-                        <span>Estoy de acuerdo con las
-                          <a href="javascript:void(0)">Políticas de privacidad</a>
-                        </span>
-                      </label>
-                    </div>
-                  </div>
-                </div>-->
                 <div class="text-center">
                   <button [disabled]="loginForm.baseForm.invalid" type="button"
                     class="btn btn-primary my-4 form-control" (click)="register()">Registrarse</button>
