--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -67,13 +67,13 @@
           </div>
         </div><br>
       </div>
-      <div *ngIf="routinesSelected.length >0">
+      <div class="col-sm-12" *ngIf="routinesSelected.length >0">
         <h2 class="display-3 mb-0 subTitle">
           {{ dateSelected }}
         </h2>
       </div>
       <ul class="code-editor-options-menu" *ngFor="let rou of routinesSelected">
-        <div class="container container rounded">
+        <div class="col-lg-12 container container rounded">
           <div [ngClass]="'content-transparent'">
             <div class="content">
               <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="currentRoutineIsUpdate(rou)">
@@ -102,11 +102,15 @@
                     </mat-tab>
                   </ul>
                 </mat-tab-group>
-                <div class="opinion-day" *ngIf="haveviewEstado()">
-                  Cómo te fue con la rutina?
+                <div class="col-lg-12 opinion-day emoticons" *ngIf="haveviewEstado()">
+                  <div class="question-text">
+                    ¿Cómo te fue con la rutina?:
+                  </div>
+                  <div>
                   <app-opinion-day [opinonToday]="calculateEstadoDeAnimoToday(rou)" 
                                   (opinionSelected)="estadoDeAnimo($event, rou)">
                   </app-opinion-day>
+                  </div>
                 </div>
               </div>
             </div>
