--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -33,6 +33,9 @@ $custom-calendar-theme: calendar-theme(
     background:transparent;
     background-color: rgba(255,255,255,0.2);
     font-weight: bolder;
+    margin-top: 20px;
+    border-radius: 10px;
+    margin-left: -40px;
 }
 
 .form-field{
@@ -88,6 +91,14 @@ h4 {
     margin-left: 12px;
     margin-bottom: -0.5px;
     font-weight: 500;
+    color: black !important;
+}
+
+.emoticons {
+    margin-bottom: 20px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
@@ -97,7 +108,6 @@ h4 {
         align-items: center;
         border-radius: 10px;
     }
-
     .stars {
         display: flex;
         align-items: center;
@@ -108,5 +118,15 @@ h4 {
         margin-bottom: 30px;
         margin-left: 10px;
         line-height: 0.5px
+    }
+    .card-transparent{
+        margin-left: -35px;
+    }
+    .emoticons {
+        text-align: center;
+        display: inline-block;
+    }
+    .question-text {
+        margin-bottom: 10px;
     }
 }
