--- a/src/app/components/reusableComponent/opinion-day/opinion-day.component.css
+++ b/src/app/components/reusableComponent/opinion-day/opinion-day.component.css
@@ -12,6 +12,7 @@
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
+    margin-bottom: 10px;
 }
 
 .button-row .mat-button-base {
@@ -41,5 +42,6 @@
     }
     .button-row {
         margin-right: -100px !important;
+        width: 300px !important;  
     } 
 }
