Se corrigio opinion

--- a/src/app/components/my-routine/my-routine.component.html
+++ b/src/app/components/my-routine/my-routine.component.html
@@ -41,7 +41,8 @@
               <div class="col-lg-12" *ngIf="getOpenDetail(rou)">
                 <div class="stars">
                 <app-opinion-routine  [routine]="rou"
-                                      [message]="'Ingrese su opinión sobre esta rutina:'">
+                                      [message]="'Ingrese su opinión sobre esta rutina:'"
+                                      (opinionRating)="setopinionRating(rou, $event)">
                 </app-opinion-routine>
                 </div>
                 <mat-tab-group dynamicHeight #tabGroup>
